infra/k8s/client-depl.yaml
# Goal: to create our create react app to be hosted into a pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1 # number of pods we want to create that running certain image
  selector: # which pods that we want to replicate & manage
    matchLabels:
      app: client
  template: # specify the configuration of the pod
    metadata: # the metadata for the selector matchLabels
      labels:
        app: client
    spec: # the image we want to run inside the container inside the pods
      containers:
        - name: client
          image: dodyvirgiawan/client:latest

---
# Goal: Create a Cluster IP Service for our react app (expose to other pods)
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  type: ClusterIP
  ports: 
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
