infra/k8s/comments-depl.yaml
# Goal: create deployment to create pods for comments service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # number of pods we want to create that running certain image
  selector: # which pods that we want to replicate & manage
    matchLabels:
      app: comments
  template: # specify the configuration of the pod
    metadata: # the metadata for the selector matchLabels
      labels:
        app: comments
    spec: # the image we want to run inside the container inside the pods
      containers:
        - name: comments
          image: dodyvirgiawan/comments:latest

---
# Goal: Create a Cluster IP Service for comments microservice (expose to other pods)
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app: comments
  type: ClusterIP
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
