infra/k8s/moderation-depl.yaml
# Goal: create deployment to create pods for moderation service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # number of pods we want to create that running certain image
  selector: # which pods that we want to replicate & manage
    matchLabels:
      app: moderation
  template: # specify the configuration of the pod
    metadata: # the metadata for the selector matchLabels
      labels:
        app: moderation
    spec: # the image we want to run inside the container inside the pods
      containers:
        - name: moderation
          image: dodyvirgiawan/moderation:latest

---
# Goal: Create a Cluster IP Service for moderation microservice (expose to other pods)
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
