infra/k8s/posts-depl.yaml
# Goal: Create a Cluster IP Service for posts microservice (expose to other pods)
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports: 
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
