infra/k8s/query-depl.yaml
# Goal: create deployment to create pods for query service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # number of pods we want to create that running certain image
  selector: # which pods that we want to replicate & manage
    matchLabels:
      app: query
  template: # specify the configuration of the pod
    metadata: # the metadata for the selector matchLabels
      labels:
        app: query
    spec: # the image we want to run inside the container inside the pods
      containers:
        - name: query
          image: dodyvirgiawan/query:latest

---
# Goal: Create a Cluster IP Service for query microservice (expose to other pods)
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
