infra/k8s/ingress-srv.yaml
# Goal: create an ingress controller service to distribute traffic to the appropriate pods.
# Ingress: having some routing rules tied to nginx, so every request comes to k8s cluster will be handled by this ingress service
#          and be routed off to appropriate service within our cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  # specify we use regex
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  # tell which ingress to use (ingress-nginx)
  ingressClassName: nginx
  rules:
    # since nginx can host many different app with different domains, we specify this as we only create 1 app with posts service exposed to outside world
    # later, we modify our system host mapping config file (windows / mac os) so that posts.com redirect to our localhost.
    - host: posts.com # this posts.com can be anything else, just to make sure we update the host file config in your OS system.
      http:
        paths:
          # POST /posts/create -> to posts microservice
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          # GET /posts -> to query microservices
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          # POST /posts/:id/comments
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          # Our react dev server
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
